// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateBar should render correctly with a children 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  margin-left: 8px;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-pq81p8-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1j9m1xk-StyledText-bodyA-variantStyles"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-pq81p8-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 70 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  margin-left: 8px;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1n6y0uh-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 69%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1j9m1xk-StyledText-bodyA-variantStyles"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="69"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1n6y0uh-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 90 && >= 70 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  margin-left: 8px;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-w970rp-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ff8c69;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 71%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1j9m1xk-StyledText-bodyA-variantStyles"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="71"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-w970rp-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value >= 90 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  margin-left: 8px;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1u63zvy-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #dd3252;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 90%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1j9m1xk-StyledText-bodyA-variantStyles"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1u63zvy-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with default props 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-pq81p8-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-pq81p8-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with unlimited value 1`] = `
<DocumentFragment>
  .cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles.cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1j9m1xk-StyledText-bodyA-variantStyles.cache-1j9m1xk-StyledText-bodyA-variantStyles {
  margin-left: 8px;
}

.cache-1sul4me-StyledProgressContainer-line {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1igbyob-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #22c8a2;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div>
    <div
      class="e1g1zfwd0 cache-12jlw7t-StyledText-bodyA-variantStyles-colorStyles"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1j9m1xk-StyledText-bodyA-variantStyles"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="cache-1sul4me-StyledProgressContainer-line et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1igbyob-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;
